--- a/tree.html
+++ b/tree.html
@@ -153,7 +153,7 @@ https://github.com/ardacarofficial/links-website is open source project.
         </a>
           
           <a class="main_a_item" href="https://lattes.cnpq.br/2388059456660725" target="_blank" rel="nofollow">
-          <button class="main_button_item">Currículo lattes</button>
+          <button class="main_button_item">Currículo Lattes</button>
         </a>
       </section>
         <div class="header_svg_list flex_row_center qrcodes">
