--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
                         </div>
                         <div class="col-6">
                             <div class="bg-light text-center p-4">
-                                <h3 class="display-4 text-primary" data-toggle="counter-up">5</h3>
-                                <h6 class="text-uppercase">Clientes Felizes</h6>
+                                <h3 class="display-4 text-primary" data-toggle="counter-up">79</h3>
+                                <h6 class="text-uppercase">Sessões realizadas</h6>
                             </div>
                         </div>
                     </div>
