--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             <div class="service-item position-relative">
                 <img class="img-fluid" src="img/tens.jpg" alt="">
                 <div class="service-text text-center">
-                    <h4 class="text-white font-weight-medium px-3">Instrumentos</h4>
+                    <h4 class="text-white font-weight-medium px-3">Recursos instrumentais</h4>
                     <p class="text-white px-3 mb-3">Pantalas, bambu, instrumento de liberação miofascial e mais para proporcionar uma terapia de acordo com a sua necessidade.</p>
                     <div class="w-100 bg-white text-center p-4" >
                         <a class="btn btn-primary" href="">Agendar</a>
@@ -406,7 +406,7 @@
             <div class="service-item position-relative">
                 <img class="img-fluid" src="img/tens.jpg" alt="">
                 <div class="service-text text-center">
-                    <h4 class="text-white font-weight-medium px-3">Instrumentos</h4>
+                    <h4 class="text-white font-weight-medium px-3">Recursos instrumentais</h4>
                     <p class="text-white px-3 mb-3">Pantalas, bambu, instrumento de liberação miofascial e mais para proporcionar uma terapia de acordo com a sua necessidade.</p>
                     <div class="w-100 bg-white text-center p-4" >
                         <a class="btn btn-primary" href="">Agendar</a>
