--- a/shell.html
+++ b/shell.html
@@ -121,13 +121,13 @@
                     <div class="nav-item dropdown hoverdrop">
                         <span href="#" class="nav-link" data-toggle="dropdown">Serviços</span>
                         <div class="dropdown-menu rounded-0 m-0">
-                            <a href="servicos#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a>
+                            <a href="servicos#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a><a href="servicos#qm" class="dropdown-item">Quick Massage</a>
                             <a href="servicos#relax" class="dropdown-item">Massagem Relaxante</a>
                             <a href="servicos#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
                             <a href="servicos#dl" class="dropdown-item">Drenagem Linfática</a>
                             <a href="servicos#vent" class="dropdown-item">Ventosaterapia</a>
                             <a href="servicos#pq" class="dropdown-item">Pedras quentes</a>
-                            <a href="servicos#ROLF" class="dropdown-item">Liberação miofascial (Conceito ROLF)</a>
+                            <a href="servicos#ROLF" class="dropdown-item">Liberação miofascial (Conceito ROLF)</a><a href="servicos#auric" class="dropdown-item">Auriculoterapia</a>
                         </div>
                     </div>
                     <a href="preco" class="nav-item nav-link">Preços</a>
@@ -184,13 +184,13 @@
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Nossos serviços</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Deep Tissue)</a>
+                                <a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Deep Tissue)</a><a class="text-white-50 mb-2" href="servicos#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a><a class="text-white-50 mb-2" href="servicos#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a>
                                 <a class="text-white-50 mb-2" href="servicos#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
                                 <a class="text-white-50 mb-2" href="servicos#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a>
                                 <a class="text-white-50 mb-2" href="servicos#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
                                 <a class="text-white-50 mb-2" href="servicos#pq"><i class="fa fa-angle-right mr-2"></i>Pedras quentes</a>
                                 <a class="text-white-50 mb-2" href="servicos#vent"><i class="fa fa-angle-right mr-2"></i>Ventosaterapia</a>
-                                <a class="text-white-50 mb-2" href="servicos#ROLF"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Conceito ROLF)</a>
+                                <a class="text-white-50 mb-2" href="servicos#ROLF"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Conceito ROLF)</a><a class="text-white-50 mb-2" href="servicos#auric"><i class="fa fa-angle-right mr-2"></i>Auriculoterapia</a>
                             </div>
                         </div>
                         <!--<div class="col-sm-12 mb-5">
