--- a/servicos.html
+++ b/servicos.html
@@ -187,7 +187,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-3 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/libe.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/quick.png" alt="">
                 </div>
                 <div class="col-lg-9">
                     <h1 class="mb-4">Quick Massage</h1>
@@ -355,13 +355,13 @@
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Nossos serviços</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Deep Tissue)</a><a class="text-white-50 mb-2" href="servicos#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a><a class="text-white-50 mb-2" href="servicos#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a>
-                                <a class="text-white-50 mb-2" href="servicos#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
-                                <a class="text-white-50 mb-2" href="servicos#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a>
-                                <a class="text-white-50 mb-2" href="servicos#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
-                                <a class="text-white-50 mb-2" href="servicos#pq"><i class="fa fa-angle-right mr-2"></i>Pedras quentes</a>
-                                <a class="text-white-50 mb-2" href="servicos#vent"><i class="fa fa-angle-right mr-2"></i>Ventosaterapia</a>
-                                <a class="text-white-50 mb-2" href="servicos#ROLF"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Conceito ROLF)</a><a class="text-white-50 mb-2" href="servicos#auric"><i class="fa fa-angle-right mr-2"></i>Auriculoterapia</a>
+                                <a class="text-white-50 mb-2" href="#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Deep Tissue)</a><a class="text-white-50 mb-2" href="#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a>
+                                <a class="text-white-50 mb-2" href="#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
+                                <a class="text-white-50 mb-2" href="#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a>
+                                <a class="text-white-50 mb-2" href="#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
+                                <a class="text-white-50 mb-2" href="#pq"><i class="fa fa-angle-right mr-2"></i>Pedras quentes</a>
+                                <a class="text-white-50 mb-2" href="#vent"><i class="fa fa-angle-right mr-2"></i>Ventosaterapia</a>
+                                <a class="text-white-50 mb-2" href="#ROLF"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Conceito ROLF)</a><a class="text-white-50 mb-2" href="#auric"><i class="fa fa-angle-right mr-2"></i>Auriculoterapia</a>
                             </div>
                         </div>
                         <!--<div class="col-sm-12 mb-5">
