--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
                 <li data-target="#header-carousel" data-slide-to="4"></li>
                 <li data-target="#header-carousel" data-slide-to="5"></li>
                 <li data-target="#header-carousel" data-slide-to="6"></li>
+                <li data-target="#header-carousel" data-slide-to="7"></li>
+                <li data-target="#header-carousel" data-slide-to="8"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item position-relative" style="min-height: 100vh;">
@@ -160,14 +162,14 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Massagem Sueca (Clássica)</h3>
-                            <p class="mx-md-5 px-5">Deixe o estresse para trás com essa técnica que tem como intuito relaxar seus músculos, aliviar dores e tensões, melhorar a circulação e proporcionar uma sensação de profundo relaxamento e bem-estar.</p>
+                            <p class="mx-md-5 px-5">Relaxar seus músculos, aliviar dores e tensões, melhorar a circulação e proporcionar uma sensação de profundo relaxamento e bem-estar, deixando o stress para trás.</p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=11974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20Sueca%20(Cl%C3%A1ssica)." target="_blank">Agendar</a>
                         </div>
                         </div>
                 </div>
                 <div class="carousel-item position-relative" style="min-height: 100vh;">
                     
-                    <a href="servicos#qm"><img class="position-absolute w-100 h-100" src="img/quickm.jpg" style="object-fit: cover;"></a>
+                    <a href="servicos#qm"><img class="position-absolute w-100 h-100" src="img/quickm.png" style="object-fit: cover;"></a>
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
@@ -751,7 +753,7 @@
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Nossos serviços</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Deep Tissue)</a><a class="text-white-50 mb-2" href="servicos#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a><a class="text-white-50 mb-2" href="servicos#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a>
+                                <a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Deep Tissue)</a><a class="text-white-50 mb-2" href="servicos#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a>
                                 <a class="text-white-50 mb-2" href="servicos#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
                                 <a class="text-white-50 mb-2" href="servicos#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a>
                                 <a class="text-white-50 mb-2" href="servicos#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
