--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         </div>
                         </div>
                 </div>
-                <div class="carousel-item position-relative active" style="min-height: 100vh;">
+                <div class="carousel-item position-relative" style="min-height: 100vh;">
                     <a href="servicos#dt"><img class="position-absolute w-100 h-100" src="img/lib.jpg" style="object-fit: cover;"></a>
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
