--- a/sobre.html
+++ b/sobre.html
@@ -108,7 +108,7 @@
             <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
                 <div class="navbar-nav m-auto py-0">
                     <a href="/" class="nav-item nav-link">Home</a>
-                    <a href="sobre" class="nav-item nav-link">Sobre</a>
+                    <a href="sobre" class="nav-item nav-link active">Sobre</a>
                      <div class="nav-item dropdown hoverdrop">
                         <span href="#" class="nav-link" data-toggle="dropdown">Serviços</span>
                         <div class="dropdown-menu rounded-0 m-0">
@@ -131,7 +131,7 @@
                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                         </div>
                     </div>-->
-                    <a href="contato" class="nav-item nav-link active">Contato</a>
+                    <a href="contato" class="nav-item nav-link ">Contato</a>
                 </div>
 <a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank" class="btn btn-primary d-none d-lg-block">Agendar</a>            </div>
         </nav>
